--- a/index.html
+++ b/index.html
@@ -369,6 +369,12 @@
                 <br>
                 lá pelas bandas da terra do <i class="material-icons text-warning">sunny</i>
             </p>
+
+            <div class="mt-5">
+                <button class="btn btn-outline-dark" id="btn_segredo">
+                    Clique aqui e conheça o segredo para virar um FullStack
+                </button>
+            </div>
         </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
